--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,6 +37,8 @@
     "eslint": "^8.40.0",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "eslint-config-custom": "workspace:*",
+    "tsconfig": "workspace:*"
   }
 }
