feat: handles personal requested review event

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@acme/trpc": "workspace:*",
+    "@doist/todoist-api-typescript": "^2.1.2",
+    "@t3-oss/env-core": "^0.3.1",
     "@trpc/server": "^10.27.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "zod": "^3.21.4"
