--- a/turbo.json
+++ b/turbo.json
@@ -33,15 +33,12 @@
   },
   "globalEnv": [
     "CI",
-    "DATABASE_URL",
-    "DISCORD_CLIENT_ID",
-    "DISCORD_CLIENT_SECRET",
-    "EXPO_ROUTER_APP_ROOT",
-    "NEXTAUTH_SECRET",
-    "NEXTAUTH_URL",
     "NODE_ENV",
     "SKIP_ENV_VALIDATION",
     "VERCEL",
-    "VERCEL_URL"
+    "VERCEL_URL",
+    "TODOIST_PROJECT",
+    "TODOIST_TOKEN",
+    "GITHUB_TARGET_REVIEWER"
   ]
 }
