--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@acme/trpc": "^0.1.0",
     "@doist/todoist-api-typescript": "^2.1.2",
+    "@octokit/core": "^4.2.1",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.5",
     "@trpc/client": "^10.27.1",
