--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/web",
+  "name": "@sync-tasks/web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,7 +13,7 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@acme/trpc": "^0.1.0",
+    "@sync-tasks/trpc": "^0.1.0",
     "@doist/todoist-api-typescript": "^2.1.2",
     "@octokit/core": "^4.2.1",
     "@t3-oss/env-nextjs": "^0.3.1",
@@ -29,8 +29,8 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@acme/eslint-config": "^0.1.0",
-    "@acme/tailwind-config": "^0.1.0",
+    "@sync-tasks/eslint-config": "^0.1.0",
+    "@sync-tasks/tailwind-config": "^0.1.0",
     "@types/node": "^18.16.5",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
