--- a/packages/config/eslint/package.json
+++ b/packages/config/eslint/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/eslint-config",
+  "name": "@sync-tasks/eslint-config",
   "version": "0.1.0",
   "main": "index.js",
   "license": "MIT",
